# krel

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  async_example.py  basic.py  error_handling.py  rekey.py
python/krel/: __init__.py
src/: crypto.rs  error.rs  ffi.rs  format.rs  lib.rs  ops.rs  secret.rs  stream.rs
